# su3-glueball-0pp-overlap

./: CLI.py  ReadMe.md  TOOLcli.py  gluballsandconstants_disproofofheuristics.tex  pyproject.toml  pyproject.toml.bak
outputs/: batch_summary.json  batch_summary.md  certificate.json  report.md  synth_corr.npz  synth_meta.json
src/: certificate.py  constants_phys.py  cross_estimator.py  excited_state_bound.py  gap_estimator.py  gevp_stability.py  glueball_calibration.py  io_utils.py  kp_recursion.py  lin_alg.py  plateau.py  report_md.py  sweeps.py
src/constructive_glueball_bounds.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cert_pipeline.py
