[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constructive-glueball-bounds"
version = "0.2.0"
description = "Deterministic SU(3) 0++ overlap and glueball calibration pipeline."
readme = "ReadMe.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{ name = "Keefe Reeves" }]
dependencies = ["numpy>=1.26,<2.0", "matplotlib>=3.7.0"]

[project.scripts]
constructive-cli = "CLI:main"
researcher-tools = "TOOLcli:main"

[tool.setuptools]
py-modules = ["CLI", "TOOLcli"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]